# servicecontrol

./: .gitignore  CMakeLists.txt  LICENSE.md  README  README.md  ServiceControl.kdev4  shell.nix
.github/workflows/: build.yml
scripts/: dbus-patches.diff  org.freedesktop.DBus.xml  update-dbus-interfaces.sh  update-dbus-patches.sh
src/: main.cpp  servicecontrol.cpp  servicecontrol.h  servicecontrol.ui
src/ui/: servicecontrol.cpp  servicecontrol.h  servicecontrol.ui
src/worker/: main.cpp  proto.capnp  sdtypes.cpp  sdtypes.h
src/worker/dbus/: org.freedesktop.LogControl1.xml  org.freedesktop.hostname1.xml  org.freedesktop.import1.ImportManager.xml  org.freedesktop.import1.Transfer.xml  org.freedesktop.locale1.xml  org.freedesktop.login1.LoginManager.xml  org.freedesktop.login1.Seat.xml  org.freedesktop.login1.Session.xml  org.freedesktop.login1.User.xml  org.freedesktop.machine1.Image.xml  org.freedesktop.machine1.Machine.xml  org.freedesktop.machine1.MachineManager.xml  org.freedesktop.network1.DHCPServer.xml  org.freedesktop.network1.Network.xml  org.freedesktop.network1.NetworkLink.xml  org.freedesktop.network1.NetworkManager.xml  org.freedesktop.oom1.OomManager.xml  org.freedesktop.resolve1.DnssdService.xml  org.freedesktop.resolve1.ResolveLink.xml  org.freedesktop.resolve1.ResolveManager.xml  org.freedesktop.systemd1.Automount.xml  org.freedesktop.systemd1.Device.xml  org.freedesktop.systemd1.Job.xml  org.freedesktop.systemd1.Manager.xml  org.freedesktop.systemd1.Mount.xml  org.freedesktop.systemd1.Path.xml  org.freedesktop.systemd1.Scope.xml  org.freedesktop.systemd1.Service.xml  org.freedesktop.systemd1.Slice.xml  org.freedesktop.systemd1.Socket.xml  (+5 more)
